<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/mist" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="Organizations"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/ns_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/production_aws"
                        android:textColor="#000"
                        android:textStyle="bold"/>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_stag"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/staging_aws"
                        android:textColor="#000"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_stag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_eu"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/eu_aws"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_eu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_gcp_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/production_gcp"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_gcp_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_gcp_stag"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/staging_gcp"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_gcp_stag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_aws_east"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/aws_east"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_aws_east"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_gcp_prod_canada"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_gcp_canada"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_gcp_prod_canada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_aws_gov_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_aws_gov"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_aws_gov_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_aws_gov_stag"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/stag_aws_gov"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_aws_gov_stag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_au_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_au"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_au_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_canary_us"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/canary_us"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_canary_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_uk_gcp_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_gcp_uk"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_uk_gcp_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_aws_uae_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_aws_uae"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_uae_aws_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txt_gcp_central_prod"
                        style="@style/customFontStyleBook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/prod_gcp_central"
                        android:textStyle="bold"
                        android:textColor="#000" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_gcp_central_prod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_enroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_rounded_corners"
            android:fontFamily="@font/lato_regular"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/enroll_org"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_policy"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/blue"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
